Create files structure

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="taxCalculator">
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+        <script src="./src/taxCalculator.module.js"></script>
+        <script src="./src/components/components.module.js"></script>
+        <script src="./src/components/percentageCalculator/percantageCalculator.js"></script>
     </head>
     <body>
         <h1>Tax Calculator</h1>
