--- a/index.html
+++ b/index.html
@@ -13,24 +13,26 @@
             <h1>Tax Calculator</h1>
         </header>
 
-        <section>
-            <h3>Tax 18%</h3>
-            <calc-percent tax="18"></calc-percent>
-        </section>
-        <hr>
-        <section>
-            <h3>Tax 32%</h3>
-            <calc-percent-range tax="32"></calc-percent-range>
-        </section>
-        <hr>
-        <section>
-            <h3>Tax 7%</h3>
-            <calc-percent-range tax="7"></calc-percent-range>
-        </section>
-        <hr>
-        <section>
-            <h3>Greatest common divisor</h3>
-            <calc-gcd></calc-gcd>
-        </section>
+        <main>
+            <section>
+                <h3>Tax 18%</h3>
+                <calc-percent tax="18"></calc-percent>
+            </section>
+            <hr>
+            <section>
+                <h3>Tax 32%</h3>
+                <calc-percent-range tax="32"></calc-percent-range>
+            </section>
+            <hr>
+            <section>
+                <h3>Tax 7%</h3>
+                <calc-percent-range tax="7"></calc-percent-range>
+            </section>
+            <hr>
+            <section>
+                <h3>Greatest common divisor</h3>
+                <calc-gcd></calc-gcd>
+            </section>
+        <main>
     </body>
 </html>
